[metadata]
name = hornwitser.factorio_tools
version = 0.0.7
url = https://github.com/Hornwitser/factorio_tools
author = Hornwitser
author_email = github@hornwitser.no
description = Tools for Debugging Factorio
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Topic :: Utilities

[options]
zip_safe = True
packages = hornwitser.factorio_tools
python_requires = >=3.7
install_requires =
    construct>=2.10.53

